# instapy

./: README.md  pyproject.toml  setup.py  timing-report.txt
in3110_instapy/: numba_filters.py  timing.py
in3110_instapy.egg-info/: PKG-INFO  SOURCES.txt
test/: test_compare.py  test_numba.py  test_numpy.py  test_python.py
